feat: add listAll
