# src/application/docs/swaggerDoc.json
@@ -92,6 +92,37 @@
         }
       }
     },
+    "/tasks/listTasks": {
+      "get": {
+        "tags": ["Tasks"],
+        "summary": "Returns a list of tasks",
+        "responses": {
+          "200": {
+            "description": "List of tasks",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "taskId": {
+                        "type": "integer",
+                        "example": 1
+                      },
+                      "description": {
+                        "type": "string",
+                        "example": "Task description"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/tasks/{id}": {
       "put": {
         "tags": ["Tasks"],
