# src/application/routes/taskRoutes.ts
@@ -8,6 +8,7 @@ const taskController = new TaskController();
 taskRoutes.post("/", taskController.createTask);
 taskRoutes.put("/:id", taskController.updateTask);
 taskRoutes.get("/", taskController.findTask);
+taskRoutes.get("/listTasks", taskController.listTasks);
 taskRoutes.delete("/:id", taskController.deleteTask);
 
 export { taskRoutes };
